# gerenciamento-tarefas-flask-postman

./: AGENTS.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  plano_testes.md  postman_collection.json  pyproject.toml  requisitos.md
.github/workflows/: ci.yml
