[tool.poetry]
name = "gerenciamento-tarefas-flask-postman"
version = "0.1.0"
description = ""
authors = ["Agnes <agnes.leoterio.alves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
